--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy==1.20.3
 pandas==1.2.5
-torchaudio==0.9.0a0+33b2469
+torchaudio==0.9.0
 matplotlib==3.4.2
 streamlit==0.86.0
 torchvision==0.10.0
